# tastebench

./: .gitignore  ATTRIBUTION.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  LLM.md  Makefile  NOTICE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
demo/: README.md
examples/: README.md  make_examples.py
scripts/: download_models.py
tastebench/: __init__.py  __main__.py  app.py  brain.py  cli.py  compare.py  dial.py  engine.py  fast_text.py  fingerprint.py  flow.py  identity.py  metric.py  modal_app.py  native.py  optimize.py  profile.py  report.py  signature.py  timing.py  tui.py  webcap.py  worker.py
tastebench/explainers/: __init__.py  explainers.json
tastebench/features/: librosa_report.py  structural.py  visual_report.py
tests/: test_explainers.py  test_smoke.py  test_worker.py
tribe_taste/: __init__.py  app.py  brain.py  cli.py  compare.py  dial.py  engine.py  fast_text.py  fingerprint.py  identity.py  metric.py  native.py  optimize.py  profile.py  report.py  signature.py  timing.py  tui.py
tribe_taste/explainers/: __init__.py  explainers.json
tribe_taste/features/: librosa_report.py  structural.py  visual_report.py
