[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "tastebench"
version = "0.1.0"
description = "Learn the taste signature of media you admire, then see how your demo diverges and what to change."
readme = "README.md"
# Core (craft layer) installs on any modern Python. The optional `brain`
# extra (torch/tribev2/whisperx) is the thing that wants 3.11–3.12 — that
# constraint lives on `make brain` / the docs, not on the whole project,
# so a fresh clone is never dead-on-arrival on a 3.13+ box.
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pablo", email = "pablo@hashingsystems.com" }]
keywords = ["music", "audio", "taste", "tribe", "librosa", "creative-tools"]

# Core deps = the model-free craft layer + CLI/TUI. The heavy brain model
# is an optional extra (the ~20 GB upstream tribev2 stack).
dependencies = [
    "numpy",
    "librosa",
    "soundfile",
    "pillow",
    "rich",
    "textual>=0.60",
]

[project.optional-dependencies]
# The TRIBE brain layer. `tribev2` is Meta AI's upstream package (a
# declared dependency, NOT vendored here) and pulls Llama-3.2-3B +
# Whisper + wav2vec2 + the fMRI encoder (~20 GB; see scripts/download_models.py
# and ATTRIBUTION.md). Llama-3.2 is gated — needs a HF token.
brain = [
    "torch",
    "transformers",
    # <1.15: 1.15 changed model-resolution semantics; the verified-working
    # TRIBE stack runs on 1.14.x. Pin for reproducible brain installs.
    "huggingface-hub<1.15",
    "tribev2 @ git+https://github.com/facebookresearch/tribev2.git",
    "moviepy>=2.2.1",
    "nibabel",
    "nilearn",
    "mne",
    "scipy",
    "whisperx",
]
# Apple-GPU ASR path: much faster Whisper transcription on M-series.
mlx = ["mlx-whisper"]
# Web QA front-end: drive a real browser, scroll, record the page to a
# silent mp4 that the video path then grades. Not a core dep (like the
# brain layer). One-time browser fetch: `playwright install chromium`.
web = ["playwright>=1.40"]
dev = ["pytest"]

[project.scripts]
tastebench = "tastebench.cli:main"

[project.urls]
Homepage = "https://github.com/pablo/tastebench"

[tool.setuptools.packages.find]
include = ["tastebench*"]

[tool.setuptools.package-data]
tastebench = ["explainers/*.json"]
